--- a/chessxone-project/apps/front-game/src/components/home/home.module.css
+++ b/chessxone-project/apps/front-game/src/components/home/home.module.css
@@ -7,19 +7,61 @@ color: var(--light-color);
     margin: 1rem 0;
 }
 .waiting_section{
-    display: flex;
-    margin: 3rem 0;
-}
-.waiting_section>div{
-    margin: 2rem;
-    padding: 10px;
-}
-.waiting_section>div:nth-child(2){
-    width: 20%;
-    min-width: 250px;
-}
-.waiting_section>div:first-child{
-    width: 80%;
-    background-color: var(--dark-color);
+    width: max-content;
     min-width: 900px;
+    margin: 1rem 0;
+    background-color: var(--dark-color);
+}
+
+.create_game{
+    min-height: 60vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.create_game .form{
+    margin: 1rem 0;
+}
+
+.create_game form input{
+    margin-left: 5px;
+    width: 400px;
+}
+.create_game form button{
+    width: max-content;
+}
+.create_game h3{
+    font-size: 3rem;
+}
+.create_game p{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.2rem;
+}
+.create_game .bg {
+transform:
+    perspective(600px)
+    rotateX(20deg);
+border-radius: 6px;
+}
+.dialog,
+.create_game p,
+.create_game input{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.create_game .bg_A{
+ margin-top: 2rem;
+transform:
+  perspective(800px)
+  rotateY(25deg) scale(0.9)
+  rotateX(10deg);
+transition: 0.6s ease all; 
+}
+.create_game .bg_A:hover{
+    transform:
+      perspective(800px)
+      rotateY(-15deg)
+      translateY(-50px)
+      rotateX(10deg)
+      scale(1);
 }
